--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,54 @@
 .expanded button:hover {
   background-color: #ccc;
 }
+
+@media (orientation: landscape) {
+  .game-cont {
+    
+  }
+}
+@media (prefers-color-scheme: dark){
+  .expanded button {
+    border-bottom: 1px solid black;
+  }
+  .expanded button:last-child {
+  border: none;
+  }
+  .expanded button:hover {
+  background-color: #555;
+  }
+}
+
+.game-btns button img {
+  height: 70%;
+  width: auto;
+  margin: auto;
+  animation: showxo 0.3s 1;
+}
+
+@keyframes showxo {
+  0% {
+    height: 0;
+    width: auto;
+  }
+  100% {
+    height: 70%;
+    width: auto;
+  }
+}
+
+.turn {
+  background-color: #5ab;
+}
+
+@keyframes won {
+  80% {
+    transform: scale(0.8);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+.won {
+  animation: won 0.5s 1;
+}
