--- a/src/style.css
+++ b/src/style.css
@@ -36,8 +36,8 @@
   }
 }
 
-.game-btns button img {
-  height: 70%;
+.game-img {
+  height: 60%;
   width: auto;
   margin: auto;
   animation: showxo 0.3s 1;
@@ -45,12 +45,10 @@
 
 @keyframes showxo {
   0% {
-    height: 0;
-    width: auto;
+    transform: scale(0);
   }
   100% {
-    height: 70%;
-    width: auto;
+    transform: scale(1);
   }
 }
 
@@ -59,6 +57,9 @@
 }
 
 @keyframes won {
+  0% {
+    transform: scale(1);
+  }
   80% {
     transform: scale(0.8);
   }
@@ -68,4 +69,8 @@
 }
 .won {
   animation: won 0.5s 1;
+}
+
+.game-btns {
+  transition: opacity 1s;
 }
